--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify-icons/fa-brands": "^1.1.0",
     "@iconify-icons/logos": "^1.1.2",
     "@iconify/react": "^1.1.3"
   }
