--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@iconify-icons/fa-brands": "^1.1.0",
     "@iconify-icons/logos": "^1.1.2",
-    "@iconify/react": "^1.1.3"
+    "@iconify/react": "^1.1.3",
+    "gh-pages": "^3.1.0"
   }
 }
